@@ -1,4 +1,5 @@
 TODO
+* add to libfcache include header?
 * vector: fail on segments that are not multitudes of element size
 * change "at offset" into hexadecimal value
 * list and write - set is also used by read callback
@@ -52,6 +53,9 @@ Optimizations:
 * mapped ranges
   - optimize calculations by adding flag to mapped range ?
     LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID
+
+20140601
+* updated dependencies
 
 20140421
 * worked on list
